Typo in Publish Label Text

--- a/src/app/Author/updatebook/updatebook.component.html
+++ b/src/app/Author/updatebook/updatebook.component.html
@@ -64,7 +64,7 @@
                         </span>
                     </div>
                     <div class="form-control">
-                        <label class="label" for="publishedDate"><span class="label-text">Publisher</span></label>
+                        <label class="label" for="publishedDate"><span class="label-text">Publish Date</span></label>
                         <input id="publishedDate" name="publishedDate" type="date"
                             class="input input-bordered rounded-none rounded-t" formControlName="publishedDate" />
                         <span class="bg-base-300 text-red-400 w-full label-text-alt rounded-b"
