--- a/src/app/user/subscribe/subscribe.component.html
+++ b/src/app/user/subscribe/subscribe.component.html
@@ -1,13 +1,15 @@
-<div class="hero min-h-screen bg-base-200">
+<div class="hero min-h-screen bg-[url('/assets/book_wall.jpg')]">
     <div class="hero-content text-center max-w-full grid grid-flow-col auto-cols-fr">
-        <div class="max-w shadow-lg border-base-100 p-4 border-2 rounded-box h-screen">
+        <div class="max-w shadow-lg border-base-100 p-4 border-2 rounded-box h-screen bg-base-200 opacity-95">
             <h1 class="text-5xl font-bold">Your Subscriptions</h1>
             <hr class="border-base-100 border-2">
             <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
                 quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
             <br>
             <div class="overflow-x-auto">
-                <table class="table w-full">
+                <div class="text-2xl font-bold text-slate-500"
+                    *ngIf="!(allSubscribedBooks && allSubscribedBooks.length != 0)">No Data Found</div>
+                <table class="table w-full" *ngIf="allSubscribedBooks && allSubscribedBooks.length != 0">
                     <!-- head -->
                     <thead>
                         <tr>
@@ -24,27 +26,33 @@
                     <tbody>
                         <tr *ngFor="let bookSubscription of allSubscribedBooks">
                             <th>{{bookSubscription.book.bookId}}</th>
-                            <td><b class="text-info underline underline-offset-2 cursor-pointer" [routerLink]="'/bookInfo/' + bookSubscription.subscription.id">{{bookSubscription.book.title}}</b></td>
+                            <td><b class="text-info underline underline-offset-2 cursor-pointer"
+                                    [routerLink]="bookSubscription.subscription.id">{{bookSubscription.book.title}}</b>
+                            </td>
                             <td>{{bookSubscription.book.category}}</td>
                             <!-- <td>{{bookSubscription.book.publisher}}</td> -->
                             <!-- <td>{{bookSubscription.book.publishedDate}}</td> -->
                             <td><b>{{bookSubscription.book.price| currency:'INR'}} </b></td>
                             <td><b>{{bookSubscription.subscription.subscriptionDate}}</b></td>
-                            <td><button class="btn btn-outline btn-warning" (click)="unsubscribe(bookSubscription.book.bookId)" [disabled]="isSubscriptionDatePost24Hours(bookSubscription.subscription.subscriptionDate)"><b>UnSubscribe</b></button>
+                            <td><button class="btn btn-outline btn-warning"
+                                    (click)="unsubscribe(bookSubscription.book.bookId)"
+                                    [disabled]="isSubscriptionDatePost24Hours(bookSubscription.subscription.subscriptionDate)"><b>UnSubscribe</b></button>
                             </td>
                         </tr>
                     </tbody>
                 </table>
             </div>
         </div>
-        <div class="max-w shadow-lg border-base-100 p-4 border-2 rounded-box h-screen">
+        <div class="max-w shadow-lg border-base-100 p-4 border-2 rounded-box h-screen bg-base-200 opacity-95">
             <h1 class="text-5xl font-bold">All Books</h1>
             <hr class="border-base-100 border-2">
             <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
                 quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
             <br>
             <div class="overflow-x-auto">
-                <table class="table w-full">
+                <div class="text-2xl font-bold text-slate-500"
+                    *ngIf="!(allUnblockedBooks && allUnblockedBooks.length != 0)">No Data Found</div>
+                <table class="table w-full" *ngIf="allUnblockedBooks && allUnblockedBooks.length != 0">
                     <!-- head -->
                     <thead>
                         <tr>
@@ -60,12 +68,14 @@
                     <tbody>
                         <tr *ngFor="let book of allUnblockedBooks">
                             <th>{{book.bookId}}</th>
-                            <td class="text-secondary link underline-offset-2 cursor-pointer" [routerLink]="'/book/' + book.bookId">{{book.title}}</td>
+                            <td class="text-secondary link underline-offset-2 cursor-pointer"
+                                [routerLink]="'/book/' + book.bookId">{{book.title}}</td>
                             <td>{{book.category}}</td>
                             <!-- <td>{{book.publisher}}</td> -->
                             <td>{{book.publishedDate}}</td>
                             <td>{{book.price| currency:'INR'}} </td>
-                            <td><button class="btn btn-outline btn-primary" (click)="subscribe(book.bookId)"><b>Subscribe</b></button>
+                            <td><button class="btn btn-outline btn-primary"
+                                    (click)="subscribe(book.bookId)"><b>Subscribe</b></button>
                             </td>
                         </tr>
                     </tbody>
