--- a/src/app/Author/blockbook/blockbook.component.html
+++ b/src/app/Author/blockbook/blockbook.component.html
@@ -1,11 +1,13 @@
-<div class="hero min-h-screen bg-base-200">
+<div class="hero min-h-screen bg-[url('/assets/book_wall.jpg')]">
     <div class="hero-content text-center max-w-full">
-        <div class="max-w shadow-lg border-base-100 p-4 border-2 rounded-box h-full w-fit" *ngIf="!previousBooksBySameUser?.length">No Books Found</div>
+        <div class="max-w shadow-lg p-4 border-2 rounded-box h-full w-fit text-xl font-bold text-error bg-base-200 border-warning opacity-95"
+            *ngIf="!previousBooksBySameUser?.length">No Books Found... Try Adding Books First</div>
         <div *ngIf="previousBooksBySameUser?.length">
-            <div class="max-w shadow-lg border-base-100 p-4 border-2 rounded-box h-full w-fit">
+            <div class="max-w shadow-lg border-base-100 p-4 border-2 rounded-box h-full w-fit  bg-base-200">
                 <h1 class="text-5xl font-bold">List of Previous Books</h1>
                 <hr class="border-base-100 border-2">
-                <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
+                <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi
+                    exercitationem
                     quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
                 <br>
                 <div class="overflow-x-auto">
@@ -29,9 +31,11 @@
                                 <td>{{book.title}}</td>
                                 <td>{{book.category}}</td>
                                 <td>{{book.publisher}}</td>
-                                <td>{{book.publishedDate}}</td>
-                                <td>{{book.price| currency:'INR'}} </td>
-                                <td [ngClass]="{'text-success':!book.blocked,'text-error':book.blocked}"><b>{{book.blocked?"Blocked":"Not Blocked"}}</b></td>
+                                <td>{{book.publishedDate | date}}</td>
+                                <td>{{book.price | currency:'INR'}} </td>
+                                <td [ngClass]="{'text-success':!book.blocked,'text-error':book.blocked}">
+                                    <b>{{book.blocked?"Blocked":"Not Blocked"}}</b>
+                                </td>
                                 <td><button
                                         [ngClass]="{'btn btn-outline': true,'btn-error':!book.blocked,'btn-info':book.blocked}"
                                         (click)="toggleBlock($event,book)"><b>{{!book.blocked?"Block":"Unblock"}}</b></button>
