--- a/src/app/Author/createbook/createbook.component.html
+++ b/src/app/Author/createbook/createbook.component.html
@@ -1,6 +1,6 @@
-<div class="hero min-h-screen bg-base-200">
+<div class="hero min-h-screen bg-[url('/assets/book_wall.jpg')]">
     <div class="hero-content text-center max-w-full h-full">
-        <div class="max-w-md shadow-lg border-base-100 p-4 border-2 rounded-box">
+        <div class="max-w-md shadow-lg border-base-100 p-4 border-2 rounded-box bg-base-200">
             <h1 class="text-5xl font-bold">Create Book</h1>
             <hr class="border-base-100 border-2">
             <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
@@ -87,14 +87,15 @@
                 </form>
             </div>
         </div>
-        <div class="max-w shadow-lg border-base-100 p-4 border-2 rounded-box h-screen">
+        <div class="max-w shadow-lg border-base-100 p-4 border-2 rounded-box h-screen bg-base-200 opacity-95">
             <h1 class="text-5xl font-bold">List of Previous Books</h1>
             <hr class="border-base-100 border-2">
             <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
                 quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
             <br>
             <div class="overflow-x-auto">
-                <table class="table w-full">
+                <div class="text-xl font-bold text-slate-500" *ngIf="previousBooksBySameUser && previousBooksBySameUser.length === 0">No Books Added yet.</div>
+                <table class="table w-full" *ngIf="previousBooksBySameUser && previousBooksBySameUser.length !== 0">
                     <!-- head -->
                     <thead>
                         <tr>
