--- a/src/app/generalbookinfo/generalbookinfo.component.html
+++ b/src/app/generalbookinfo/generalbookinfo.component.html
@@ -1,5 +1,5 @@
-<div class="hero min-h-screen bg-base-200">
-    <div class="hero-content flex-col lg:flex-row border shadow-lg rounded-lg border-base-200">
+<div class="hero min-h-screen bg-[url('/assets/book_wall.jpg')]">
+    <div class="hero-content flex-col lg:flex-row border shadow-lg rounded-lg border-base-200 bg-base-200 opacity-95">
       <div class="h-full">
         <button class="btn btn-outline mb-10" onclick="window.history.go(-1)">⬅️ Go Back</button>
         <img src="https://placeimg.com/260/400/arch" class="max-w-xs max-h-full rounded-lg shadow-2xl" />
