--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="hero min-h-screen bg-base-200">
-    <div class="hero-content flex-col lg:flex-row-reverse">
+<div class="hero min-h-screen bg-[url('/assets/book_wall.jpg')]">
+    <div class="hero-content flex-col lg:flex-row-reverse bg-base-200 bg-opacity-70 rounded-xl">
         <div class="text-center lg:text-left">
             <h1 class="text-5xl font-bold">Login now!</h1>
             <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
@@ -12,7 +12,8 @@
                         <label class="label" for="email_id"><span class="label-text">Your Email</span></label>
                         <label for="email_id" class="input-group">
                             <span>📧</span>
-                            <input id="email_id" name="emailId" type="text" placeholder="info@site.com" class="input input-bordered" formControlName="emailId" />
+                            <input id="email_id" name="emailId" type="text" placeholder="info@site.com"
+                                class="input input-bordered" formControlName="emailId" />
                         </label>
                         <p><span class="text-red-400 w-full p-5 label-text-alt"
                                 *ngIf="loginForm.controls['emailId'].invalid && loginForm.controls['emailId'].dirty">Please
@@ -22,7 +23,8 @@
                         <label class="label" for="password"><span class="label-text">Your Password</span></label>
                         <label for="password" class="input-group">
                             <span>🔑</span>
-                            <input id="password" name="password" type="password" placeholder="password" class="input input-bordered" formControlName="password" />
+                            <input id="password" name="password" type="password" placeholder="password"
+                                class="input input-bordered" formControlName="password" />
                         </label>
                         <p><span class="text-red-400 w-full p-5 label-text-alt"
                                 *ngIf="loginForm.controls['password'].invalid && loginForm.controls['password'].dirty">Password
