--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,6 @@
-<div class="hero min-h-screen bg-base-200">
+<div class="hero min-h-screen bg-[url('/assets/book_wall.jpg')]">
     <div class="hero-content text-center">
-        <div class="max-w-md shadow-lg border-base-100 p-4 border-2 rounded-box">
+        <div class="max-w-md shadow-lg border-base-100 p-4 border-2 rounded-box bg-base-200">
             <h1 class="text-5xl font-bold">Register Here...</h1>
             <hr class="border-base-100 border-2">
             <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
