--- a/src/app/user/read/read.component.html
+++ b/src/app/user/read/read.component.html
@@ -1,11 +1,11 @@
-<div class="hero min-h-screen bg-base-200">
-    <div class="hero-content flex-col lg:flex-row border shadow-lg rounded-lg border-base-200">
-        <div class="w-screen">
+<div class="hero min-h-screen bg-[url('/assets/book_wall.jpg')]">
+    <div class="hero-content flex-col lg:flex-row border shadow-lg rounded-lg border-base-200 bg-base-200 opacity-95">
+        <div class="w-full">
             <button class="btn btn-outline mb-10" onclick="window.history.go(-1)">⬅️ Go Back</button>
             <br>
             <h1 class="text-5xl font-bold pb-2 w-full h-full">{{title}}</h1>
             <div class="py-4 w-full">
-                <p class="pl-4">{{content}}</p>
+                <p class="pl-4 bg-base-100">{{content}}</p>
             </div>
         </div>
 
