Changing Static Text and Beautification

--- a/src/app/Author/createbook/createbook.component.html
+++ b/src/app/Author/createbook/createbook.component.html
@@ -3,8 +3,8 @@
         <div class="max-w-md shadow-lg border-base-100 p-4 border-2 rounded-box bg-base-200">
             <h1 class="text-5xl font-bold">Create Book</h1>
             <hr class="border-base-100 border-2">
-            <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
-                quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+            <p class="py-6">To create the book. <span class="underline">The Title should be Unique</span>. Please add
+                Title, Category, Price (in INR), Publisher Name, Date and content of the page. (255 Max length. Will need to increase in backend). </p>
             <br>
             <div class="" id="createBookFormContainer">
                 <form [formGroup]="createBookForm" (ngSubmit)="createBook()">
@@ -65,7 +65,8 @@
                     </div>
                     <div class="form-control">
                         <label class="label" for="content"><span class="label-text">Content:</span></label>
-                        <textarea id="content" name="content" type="texta" class="input input-bordered rounded-none rounded-t" formControlName="content"></textarea>
+                        <textarea id="content" name="content" type="texta"
+                            class="input input-bordered rounded-none rounded-t" formControlName="content"></textarea>
                         <span class="bg-base-300 text-red-400 w-full label-text-alt rounded-b"
                             *ngIf="createBookForm.controls['content'].invalid && createBookForm.controls['content'].dirty">
                             📅 Content Data is not supported
@@ -90,11 +91,12 @@
         <div class="max-w shadow-lg border-base-100 p-4 border-2 rounded-box h-screen bg-base-200 opacity-95">
             <h1 class="text-5xl font-bold">List of Previous Books</h1>
             <hr class="border-base-100 border-2">
-            <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
-                quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+            <p class="py-6">Following is the List of previous books written by you. You can check the general
+                information by clicking <span class="text-secondary">Book Title</span></p>
             <br>
             <div class="overflow-x-auto">
-                <div class="text-xl font-bold text-slate-500" *ngIf="previousBooksBySameUser && previousBooksBySameUser.length === 0">No Books Added yet.</div>
+                <div class="text-xl font-bold text-slate-500"
+                    *ngIf="previousBooksBySameUser && previousBooksBySameUser.length === 0">No Books Added yet.</div>
                 <table class="table w-full" *ngIf="previousBooksBySameUser && previousBooksBySameUser.length !== 0">
                     <!-- head -->
                     <thead>
@@ -109,7 +111,8 @@
                         <!-- row 1 -->
                         <tr *ngFor="let book of previousBooksBySameUser">
                             <th>{{book.bookId}}</th>
-                            <td class="text-secondary link underline-offset-2 cursor-pointer" [routerLink]="'/book/' + book.bookId">{{book.title}}</td>
+                            <td class="text-secondary link underline-offset-2 cursor-pointer"
+                                [routerLink]="'/book/' + book.bookId">{{book.title}}</td>
                             <td>{{book.publisher}}</td>
                             <td>{{book.price}}</td>
                         </tr>
