--- a/src/app/Author/blockbook/blockbook.component.html
+++ b/src/app/Author/blockbook/blockbook.component.html
@@ -6,9 +6,8 @@
             <div class="max-w shadow-lg border-base-100 p-4 border-2 rounded-box h-full w-fit  bg-base-200">
                 <h1 class="text-5xl font-bold">List of Previous Books</h1>
                 <hr class="border-base-100 border-2">
-                <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi
-                    exercitationem
-                    quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                <p class="py-6">Following is the List of previous books written by you. You can check the general
+                    information by clicking <span class="text-secondary">Book Title</span>.</p>
                 <br>
                 <div class="overflow-x-auto">
                     <table class="table w-full">
