--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,8 +2,7 @@
     <div class="hero-content flex-col lg:flex-row-reverse bg-base-200 bg-opacity-70 rounded-xl">
         <div class="text-center lg:text-left">
             <h1 class="text-5xl font-bold">Login now!</h1>
-            <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
-                quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+            <p class="py-6">Fill out the form below, to login to my super awesome imaginary website. 😁 </p>
         </div>
         <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
             <div class="card-body">
@@ -19,6 +18,7 @@
                                 *ngIf="loginForm.controls['emailId'].invalid && loginForm.controls['emailId'].dirty">Please
                                 Check your email...</span></p>
                     </div>
+                    <br>
                     <div class="form-control">
                         <label class="label" for="password"><span class="label-text">Your Password</span></label>
                         <label for="password" class="input-group">
