--- a/src/app/user/subscribe/subscribe.component.html
+++ b/src/app/user/subscribe/subscribe.component.html
@@ -3,8 +3,9 @@
         <div class="max-w shadow-lg border-base-100 p-4 border-2 rounded-box h-screen bg-base-200 opacity-95">
             <h1 class="text-5xl font-bold">Your Subscriptions</h1>
             <hr class="border-base-100 border-2">
-            <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
-                quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+            <p class="py-6">This is the list of books that you have bought on our platform. Click on the <span class="text-info">Book Name</span> to
+                see reciept and read the contents of the book. <span class="text-warning">Unsubscribe</span> will remove
+                your subscription to that book provided its within 24-hrs</p>
             <br>
             <div class="overflow-x-auto">
                 <div class="text-2xl font-bold text-slate-500"
@@ -46,8 +47,8 @@
         <div class="max-w shadow-lg border-base-100 p-4 border-2 rounded-box h-screen bg-base-200 opacity-95">
             <h1 class="text-5xl font-bold">All Books</h1>
             <hr class="border-base-100 border-2">
-            <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
-                quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+            <p class="py-6">List of books present on our platform. you can click on the <span class="text-secondary">Book Name</span> to get more information on
+                that book, or buy a subscription by clicking on <span class="text-primary">Subscribe</span> </p>
             <br>
             <div class="overflow-x-auto">
                 <div class="text-2xl font-bold text-slate-500"
